# warp-cn

./: .gitattributes  Cargo.toml  README_zh.md
crates/warp_i18n/: Cargo.toml  GLOSSARY.md  MERGE_NOTES.md  build.rs  lint_allowlist.toml
crates/warp_i18n/benches/: lookup.rs
crates/warp_i18n/bundles/en/: a11y.ftl  ai_ui.ftl  banner.ftl  bindings.ftl  code_review.ftl  coding.ftl  command_palette.ftl  core.ftl  debug.ftl  dialog.ftl  error.ftl  keymap.ftl  menu.ftl  misc.ftl  notification.ftl  onboarding.ftl  pricing.ftl  resource_center.ftl  search.ftl  settings.ftl  settings_about.ftl  settings_account.ftl  settings_ai.ftl  settings_appearance.ftl  settings_billing.ftl  settings_cloud_platform.ftl  settings_code.ftl  settings_features.ftl  settings_keybindings.ftl  settings_mcp.ftl  settings_privacy.ftl  settings_referrals.ftl  settings_shared_blocks.ftl  settings_teams.ftl  settings_warp_drive.ftl  settings_warpify.ftl  terminal.ftl  vim.ftl  voice.ftl  workflow.ftl
crates/warp_i18n/bundles/zh-CN/: a11y.ftl  ai_ui.ftl  banner.ftl  bindings.ftl  code_review.ftl  coding.ftl  command_palette.ftl  core.ftl  debug.ftl  dialog.ftl  error.ftl  keymap.ftl  menu.ftl  misc.ftl  notification.ftl  onboarding.ftl  pricing.ftl  resource_center.ftl  search.ftl  settings.ftl  settings_about.ftl  settings_account.ftl  settings_ai.ftl  settings_appearance.ftl  settings_billing.ftl  settings_cloud_platform.ftl  settings_code.ftl  settings_features.ftl  settings_keybindings.ftl  settings_mcp.ftl  settings_privacy.ftl  settings_referrals.ftl  settings_shared_blocks.ftl  settings_teams.ftl  settings_warp_drive.ftl  vim.ftl  (+4 more)
crates/warp_i18n/examples/: smoke.rs
crates/warp_i18n/src/: intern.rs  lib.rs  lib_tests.rs  loader.rs  locale.rs  macros.rs  notification.rs
crates/warp_i18n/tests/: property_bundle_subset.rs  property_init_idempotent.rs  property_linearizable.rs  property_locale.rs  property_malformed_ftl.rs  property_remote_string.rs  property_render.rs  property_settings.rs  property_watch.rs
crates/warp_i18n_macros/: Cargo.toml  build.rs
crates/warp_i18n_macros/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/src/i18n_lint/: allowlist.rs  mod.rs  parity.rs  report.rs  sites.rs  tests.rs  visitor.rs
xtask/tests/: i18n_lint_test.rs
(+238 files in other folders)
