[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
globset = { workspace = true }
serde = { workspace = true, features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"] }
toml = "0.8"
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
