[package]
name = "warp_i18n"
edition = "2024"
description = "Warp i18n runtime: Fluent bundle loading, locale resolution, lock-free t!() lookup"
publish.workspace = true
license.workspace = true

[dependencies]
warp_i18n_macros.workspace = true
i18n-embed = { version = "0.15", features = ["fluent-system", "rust-embed"] }
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = { version = "0.9", features = ["macros"] }
sys-locale = "0.3"
rust-embed.workspace = true
arc-swap = "1.7"
once_cell.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
serde = { workspace = true }
unicode-segmentation = "1.12"
phf = { version = "0.11", features = ["macros"] }
parking_lot.workspace = true
anyhow.workspace = true

[build-dependencies]
fluent-syntax = "0.11"
phf_codegen = "0.11"
walkdir.workspace = true

[dev-dependencies]
proptest = "1.5"
tempfile.workspace = true
trybuild = "1"
criterion = { version = "0.5.1", features = ["html_reports"] }
loom = "0.7"
fluent-syntax = "0.11"
serde_json.workspace = true

[[bench]]
name = "lookup"
harness = false
