[package]
name = "warp_i18n_macros"
edition = "2024"
description = "Compile-time t!() / tr!() proc-macros for warp_i18n. Validates Fluent keys against bundles/en/*.ftl key index."
publish.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
phf = "0.11"

[build-dependencies]
phf_codegen = "0.11"
fluent-syntax = "0.11"
walkdir = "2"
